wip: new bundle continue